Fix title bar overflow on mobile

--- a/src/components/TitleBar/styles.module.scss
+++ b/src/components/TitleBar/styles.module.scss
@@ -17,6 +17,10 @@
 .title {
   align-self: center;
   flex-grow: 1;
+  min-width: 0;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .logo {
